[package]
name = "donut"
version = "0.2.0"
authors = ["Nick Pillitteri"]
description = "DNS over HTTPS server"
homepage = "https://github.com/56quarters/donut"
repository = "https://github.com/56quarters/donut"
readme = "README.md"
license = "GPL-3.0+"
edition = "2018"

[dependencies]
base64 = "0.11.0"
clap = "2.33"
futures-util = "0.3.1"
hyper = "0.13.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tokio = { version = "0.2.6", features = ["full"] }
tracing = "0.1.11"
tracing-subscriber = "0.1.6"
trust-dns-client = { version = "0.19.0", features = [] }
url = "2.1.0"

[lib]
name = "donut"
path = "src/donut/lib.rs"

[badges]
travis-ci = { repository = "56quarters/donut" }
