[package]
name = "donut"
version = "0.2.0"
authors = ["Nick Pillitteri"]
description = "DNS over HTTPS server"
homepage = "https://github.com/56quarters/donut"
repository = "https://github.com/56quarters/donut"
readme = "README.md"
license = "GPL-3.0+"
edition = "2021"

[dependencies]
base64 = "0.11.0"
clap = { version = "3.0.0-rc.8", features = ["cargo", "derive", "std"], default-features = false }
futures-util = "0.3.17"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tracing = "0.1.11"
tracing-subscriber = "0.1.6"
trust-dns-client = { version = "0.20.3", features = [] }
url = "2.1.0"

[lib]
name = "donut"
path = "src/donut/lib.rs"

[badges]
travis-ci = { repository = "56quarters/donut" }
