[package]
name = "donut"
version = "0.2.0"
authors = ["Nick Pillitteri"]
description = "DNS over HTTPS server"
homepage = "https://github.com/56quarters/donut"
repository = "https://github.com/56quarters/donut"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["doh", "dns", "dns-over-https"]
edition = "2021"

[dependencies]
base64 = "0.11.0"
bytes = "1.1.0"
clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
futures-util = "0.3.17"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
trust-dns-client = { version = "0.20.3", features = [] }
warp = "0.3.2"

[lib]
name = "donut"
path = "src/donut/lib.rs"

[badges]
travis-ci = { repository = "56quarters/donut" }
